# comp-prog

./: .gitignore  NOTICE.md  README.md  WORKLOG.md  compile_commands.json  index.norg
archive/: CMakeLists.txt
archive/PT1/: PT1Takeaways.norg
archive/PT1/BSubstringAndSubsequence/: BSubstringAndSubsequence.testcases
archive/PT1/CPlayingPiano/: CPlayingPiano.testcases
archive/PT1/DIgorInTheMuseum/: DIgorInTheMuseum
archive/PT1/FChatScreenshots/: FChatScreenshots.cpp
archive/PT1/Problem1BalancedPhoto/: Problem1BalancedPhoto.cpp  Problem1BalancedPhoto.testcases
archive/PT1/Problem1BovineGenomics/: Problem1BovineGenomics.testcases
archive/PT1/Problem1EqualSumSubarrays/: Problem1EqualSumSubarrays.cpp
archive/PT1/Problem1TimeIsMooney/: Problem1TimeIsMooney  Problem1TimeIsMooney.testcases
archive/PT1/Problem1Timeline/: Problem1Timeline
archive/PT1/Problem1WhyDidTheCowCrossTheRoad/: Problem1WhyDidTheCowCrossTheRoad  Problem1WhyDidTheCowCrossTheRoad.cpp
archive/PT1/Problem2HoofPaperScissors/: Problem2HoofPaperScissors.cpp
archive/PT1/Problem2Portals/: Problem2Portals.cpp
archive/PT1/Problem2SleepyCowSorting/: Problem2SleepyCowSorting
archive/PT1/Problem2WhyDidTheCowCrossTheRoadII/: Problem2WhyDidTheCowCrossTheRoadII  Problem2WhyDidTheCowCrossTheRoadII.testcases
archive/PT1/Problem3LasersAndMirrors/: Problem3LasersAndMirrors.testcases
archive/PT1/Problem3MooNetwork/: Problem3MooNetwork.cpp  Problem3MooNetwork.testcases
archive/PT1/Problem3WhyDidTheCowCrossTheRoadIII/: Problem3WhyDidTheCowCrossTheRoadIII
archive/PT2/HighScore/: HighScore  (+1 more)
(+402 files in other folders)
